# pam_auth_usb

./: CMakeLists.txt  LICENSE  README.md  pam_auth.kdev4
src/: CMakeLists.txt  config.cpp  config.h  device.h  pam.cpp  pam_usb.conf.in  usb_device.cpp  usb_device.h
